lots of changes